--- a/myweb/user_app/templates/login.html
+++ b/myweb/user_app/templates/login.html
@@ -7,7 +7,7 @@
 
 <link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min2.css' %}" rel="stylesheet">
 <link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min.css' %}" rel="stylesheet">
-<link href="{% static 'css/index.css' %}" rel="stylesheet">
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 <script src="{% static 'js/jquery-1.7.2.min.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
