--- a/myweb/user_app/static/css/index.css
+++ b/myweb/user_app/static/css/index.css
@@ -19,10 +19,10 @@ html,body{height:100%;}
 }
 #row2{
 	background-color: #0055CC;
-	height: 40%;
+	height: 85%;
 }
-#row3{
+/*#row3{
 	background-color:  #49AFCD;
 	height: 40%;
-}
+}*/
 
