add modify_personalinfo.html/modify urls views

--- a/myweb/user_app/static/css/things.css
+++ b/myweb/user_app/static/css/things.css
@@ -1,8 +1,10 @@
 #row3{
-	background-color: #0074CC;
+	background-color: ;
 	height: 100%;
 }
 #item{
-	background-color: white;
+	
+	background-color: #0074CC;
+	color: white;
 	
 }
