--- a/myweb/user_app/static/css/index.css
+++ b/myweb/user_app/static/css/index.css
@@ -21,6 +21,11 @@ html,body{height:100%;}
 	background-color: #0055CC;
 	height: 85%;
 }
+p{
+	height: 15%;
+	margin-left: 33%;
+	margin-top: 5%;
+}
 /*#row3{
 	background-color:  #49AFCD;
 	height: 40%;
