--- a/myweb/user_app/templates/login.html
+++ b/myweb/user_app/templates/login.html
@@ -162,7 +162,7 @@ function barter_btn(bb) {
 
 <div class="register_body">
 	<div class="col-xs-12 register_title">注册</div>
-	<form action="" class="register" method="post">
+	<form action="register" class="register" method="post">
 		{% csrf_token %}
 		<div class="nav">
 			<div class="nav register_nav">
@@ -170,7 +170,7 @@ function barter_btn(bb) {
 					用户名:
 				</div>
 				<div class="col-xs-6">
-					<input type="text" name="" id="name_r" value="" placeholder="&nbsp;&nbsp;用户名/手机号" onBlur="javascript:ok_or_errorByRegister(this)" />
+					<input type="text" name="namer" id="name_r" value="" placeholder="&nbsp;&nbsp;用户名/手机号" onBlur="javascript:ok_or_errorByRegister(this)" />
 				</div>
 				<div class="col-xs-1 ok_gou">
 					√
@@ -184,7 +184,7 @@ function barter_btn(bb) {
 					密&nbsp;&nbsp;&nbsp;码:
 				</div>
 				<div class="col-xs-6">
-					<input type="password" name="" id="psd_r" value="" placeholder="&nbsp;&nbsp;密码" onBlur="javascript:ok_or_errorByRegister(this)" />
+					<input type="password" name="pwdr" id="psd_r" value="" placeholder="&nbsp;&nbsp;密码" onBlur="javascript:ok_or_errorByRegister(this)" />
 				</div>
 				<div class="col-xs-1 ok_gou">
 					√
