--- a/myweb/user_app/templates/modify_personalinfo.html
+++ b/myweb/user_app/templates/modify_personalinfo.html
@@ -49,32 +49,41 @@
 		<div class="span1"></div>
 		<div class="span6" id="row3">
 			<div class="row-fluid">
+			<form action="modify" class="personalinfomation" method="POST">
+			{% csrf_token %} 
 			<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
 			    <tr>
-					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">物品名称：</h4>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">昵称：</h4>
     				<td height="45" align="left">
-    					<input name="objectname" type="text" class="mytextfield" id="" value="" maxlength="10" />
+    					<input name="nickname" type="text" class="mytextfield" id="" value="" maxlength="10" />
 					</td> 
 					</td>
 			    </tr>
 			    <tr>
-					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">件数：</h4>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">手机：</h4>
     				<td height="45" align="left">
-    					<input name="objectnum" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+    					<input name="phone" type="text" class="mytextfield" id="" value="" maxlength="11" />
 					</td> 
 					</td>
 			    </tr>
 			    <tr>
-					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">图片：</h4>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">学院：</h4>
+    				<td height="45" align="left">
+    					<input name="school" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="10" />
+					</td> 
+					</td>
+			    </tr>
+			    <tr>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">头像：</h4>
     				<td height="" align="left">
     					<input style="color: white;" name="file" type="file" class="myfile" />
 					</td> 
 					</td>
 			    </tr>
 			    <tr> 
-			    	<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">物品简介：</h4>
+			    	<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: white;">个人简介：</h4>
 			    	<td  height="150" colspan="3" valign="middle" scope="row">
-			    		<textarea style="margin-top: 10px;width: 80%;" name="textarea" cols="25" rows="10" class="mytextarea" id="plan_c" style="color:#999" onfocus="if(this.value=='请描述一下你的物品…') this.value='';" onblur="if(this.value=='')this.value='请描述一下你的物品…';">请描述一下你的物品…
+			    		<textarea style="margin-top: 10px;width: 80%;" name="personal_intro" cols="25" rows="10" class="mytextarea" id="plan_c" style="color:#999" onfocus="if(this.value=='请简单介绍一下你自己…') this.value='';" onblur="if(this.value=='')this.value='请简单介绍一下你自己…';">请简单介绍一下你自己…
 			    		</textarea>
 			    	</td>
 			    	
@@ -83,9 +92,10 @@
 			</div>
 			<br>
 			<div class="row-fluid">
-				<input style="margin-left: 45%;" type="submit" class="btn btn-primary" value="登录" id="login" />
+				<input style="margin-left: 45%;" type="submit" class="btn btn-primary" value="登录" id="" />
 			</div>
 		</div>
+		</form>
 		
 		<div class="span2"></div>
 	</div>               
