--- a/myweb/user_app/templates/things_can_be_borrowed.html
+++ b/myweb/user_app/templates/things_can_be_borrowed.html
@@ -17,27 +17,27 @@
 		<div class="span2">  
 		</div>
 		<div class="span2" style="height: 100%;">
-			<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="height: 80%;margin-top:5%;margin-left: 5%;">
+			<img alt="90x90" src="{% static 'img/shared.jpg' %}" class="img-circle" style="height: 80%;margin-top:5%;margin-left: 5%;">
 		</div>
 		<div class="span1"></div>
 		<div class="span1" id="home" style="height: 100%;">
 			<a href="index" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-home" style="margin-top: 80%;"></span> 主页
+          	<span class="glyphicon glyphicon-user" style="margin-top: 80%;"></span> 主页
         	</a>
 		</div>
 		<div class="span1" id="home">
 			<a href="things_can_be_borrowed" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-home" style="margin-top: 80%;"></span> 借用
+          	<span class="glyphicon glyphicon-shopping-cart" style="margin-top: 80%;"></span> 借用
         	</a>
 		</div>
 		<div class="span1" id="home">
 			<a href="sharethings" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-home" style="margin-top: 80%;"></span> 分享
+          	<span class="glyphicon glyphicon-send" style="margin-top: 80%;"></span> 分享
         	</a>
 		</div>
 		<div class="span1" id="home">
-			<a href="#" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-home" style="margin-top: 80%;"></span> 管理
+			<a href="../admin" class="btn btn-info btn-lg" id="homebutton">
+          	<span class="glyphicon glyphicon-asterisk" style="margin-top: 80%;"></span> 管理
         	</a>
 		</div>
 		
@@ -50,10 +50,10 @@
 		<div class="span8" id="row3">
 			<div class="row-fluid">
 				<div class="span4" id="item">
-					<div>
-						<img alt="80x80" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					<div style="float: left;height: 110%;width:40% ;">
+						<img alt="60x60" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left:%;">
 					</div>
-					<div>
+					<div style="height: 100%;">
 						<font style="float: left;">件数：1</font>
 						<font style="float: right;">我要借用</font>
 					</div>
