--- a/myweb/user_app/templates/index.html
+++ b/myweb/user_app/templates/index.html
@@ -18,7 +18,9 @@
 		<div class="span2" style="height: 100%;">
 			<img alt="90x90" src="{% static 'img/shared.jpg' %}" class="img-circle" style="height: 80%;margin-top:5%;margin-left: 5%;">
 		</div>
-		<div class="span1"></div>
+		<div class="span1" style="color: white;">
+			你好|<a href="/user/logout" style="color: white;">退出</a>
+		</div>
 		<div class="span1" id="home" style="height: 100%;">
 			<a href="index" class="btn btn-info btn-lg" id="homebutton">
           	<span class="glyphicon glyphicon-user" style="margin-top: 80%;"></span> 主页
@@ -50,10 +52,18 @@
 				<img src="{% static 'img/headportrait.jpg' %}" class="img-rounded" style="height:70%;margin-left: 25%;margin-top:10% ;" >
 			</div>
 			<div class="name" style=" background-color: #0074CC;height: 30%;color: white;margin-top: 10%;">
-				<p>用户名：小雨</p>
+				{% if user %}
+				    <ul>
+				    <p>用户名：{{ user.nickname }}</p>
+				    <p>学院：{{ user.school }}</p>
+				    <p>简介：{{ user.personal_intro }}</p>
+				    </ul> 
+				{% endif %}
+				<!--p>用户名：小雨</p>
 				<p>学院：信息学院</p>
-				<p>简介：帅哥</p>
-			</div>
+				<p>简介：帅哥</p-->   
+				<a href="modify_personalinfo" style="color: white;">信息不对？</a>
+			</div>   
 		</div>
 		<div class="span4" style="background-color:;height: 100%;">
 			
