--- a/myweb/user_app/static/css/share.css
+++ b/myweb/user_app/static/css/share.css
@@ -1,4 +1,11 @@
 #row3{
-	background-color: #0074CC;
-	height: 100%;
+	background-color: #FFFFFF;
+	border: 1px soild#999;
+	border: 1px solid rgba(0, 0, 0, .2);
+	border-radius: 10px;
+	 outline: 0;
+	-webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+          box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+	height: 90%; 
+	margin-top: 10px;
 }
