--- a/myweb/user_app/templates/index.html
+++ b/myweb/user_app/templates/index.html
@@ -4,86 +4,489 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min2.css' %}" rel="stylesheet">
+		<!--link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min2.css' %}" rel="stylesheet"-->
 		<link href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/index.css' %}" rel="stylesheet">
+		<link href="{% static 'css/things.css' %}" rel="stylesheet">
 		<title></title>
 	</head>
 	<body>
-
+		
 	<div class="container-fluid">
-	<div class="row-fluid" id="row1">
-		<div class="span2">  
+	<div class="row clearfix" id="row1">
+		<div class="col-md-2 column">  
 		</div>
-		<div class="span2" style="height: 100%;">
+		<div class="col-md-2 column" style="height: 100%;">
 			<img alt="90x90" src="{% static 'img/shared.jpg' %}" class="img-circle" style="height: 80%;margin-top:5%;margin-left: 5%;">
 		</div>
-		<div class="span1" style="color: white;">
-			你好|<a href="/user/logout" style="color: white;">退出</a>
-		</div>
-		<div class="span1" id="home" style="height: 100%;">
+		
+		<div class="col-md-1 column" id="home" style="height: 100%;">
 			<a href="index" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-user" style="margin-top: 80%;"></span> 主页
+          	<span class="glyphicon glyphicon-home" style="margin-top: 80%;"></span> 首页
         	</a>
 		</div>
-		<div class="span1" id="home">
-			<a href="things_can_be_borrowed" class="btn btn-info btn-lg" id="homebutton">
-          	<span class="glyphicon glyphicon-shopping-cart" style="margin-top: 80%;"></span> 借用
-        	</a>
-		</div>
-		<div class="span1" id="home">
+		<div class="col-md-1 column" id="home">
 			<a href="sharethings" class="btn btn-info btn-lg" id="homebutton">
           	<span class="glyphicon glyphicon-send" style="margin-top: 80%;"></span> 分享
         	</a>
 		</div>
-		<div class="span1" id="home">
+		<div class="col-md-1 column" id="home">
+			<a href="index_per" class="btn btn-info btn-lg" id="homebutton">
+          	<span class="glyphicon glyphicon-user" style="margin-top: 80%;"></span> 用户
+        	</a>
+		</div>
+		<div class="col-md-1 column" id="home">
 			<a href="../admin" class="btn btn-info btn-lg" id="homebutton">
           	<span class="glyphicon glyphicon-asterisk" style="margin-top: 80%;"></span> 管理
         	</a>
 		</div>
 		
-		
-		<div class="span2"></div>
-	</div>
-	<div class="row-fluid" id="row2">
-		<div class="span2"></div>
-		<div class="span3" style="background-color:;height: 100%;">
-			<div class="headportrait" style="background-color: #0074CC;height: 50%;margin-top: 10px;">
-				<img src="{% static 'img/headportrait.jpg' %}" class="img-rounded" style="height:70%;margin-left: 25%;margin-top:10% ;" >
-			</div>
-			<div class="name" style=" background-color: #0074CC;height: 30%;color: white;margin-top: 10%;">
-				{% if user %}
-				    <ul>
-				    <p>用户名：{{ user.nickname }}</p>
-				    <p>学院：{{ user.school }}</p>
-				    <p>简介：{{ user.personal_intro }}</p>
-				    </ul> 
-				{% endif %}
-				<!--p>用户名：小雨</p>
-				<p>学院：信息学院</p>
-				<p>简介：帅哥</p-->   
-				<a href="modify_personalinfo" style="color: white;">信息不对？</a>
-			</div>   
-		</div>
-		<div class="span4" style="background-color:;height: 100%;">
+		<div class="col-md-2 column" style="color: white;" id="greeting">
+			{% if user %}
+				   
+				<p>{{ user.nickname }},你好|<a href="/user/logout" style="color: white;">退出</a></p>
 			
-			<div class="orderlist" style="color:white; height: 86%;background-color:#0074CC;margin-top:-10px;">
-				<div><h3>正在使用的物品：</h3></div>
-					<div class="item" style="height: 20%;"><font style="float: right;">提交　删除</font>物品1
-						<img src="{% static 'img/a.jpg' %}" style="height: 90%;float: left;">
-					</div>
-					<div class="item" style="height: 20%;"><font style="float: right;">提交　删除</font>物品2
-						<img src="{% static 'img/a.jpg' %}" style="height: 90%;float: left;">
-					</div>
-					<div class="item" style="height: 20%;"><font style="float: right;">提交　删除</font>物品3
-						<img src="{% static 'img/a.jpg' %}" style="height: 90%;float: left;">
-					</div>
-					<div class="item" style="height: 20%;"><font style="float: right;">提交　删除</font>物品4
-						<img src="{% static 'img/a.jpg' %}" style="height: 90%;float: left;">
-					</div>
-			</div>
+			{% else %}
+				<p>你好|<a href="/user/logout" style="color: white;">退出</a></p>
+			
+			{% endif %}
+			
 		</div>
-		<div class="span2"></div>
+		
+		
+		<div class="col-md-2 column"></div>
+	</div>
+
+	<div class="row clearfix" id="row2">
+		<div class="col-md-2 column"></div>
+
+		<!--div class="col-md-8 column" id="row3">
+			<div class="row clearfix">
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="60x60" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left:%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+								<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+									我要借用
+								</button>
+								
+								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+													&times;
+												</button>
+												<h3 class="modal-title" id="myModalLabel">
+													订单生成  
+												</h3>
+											</div>
+											<form action="" method="POST">
+												{% csrf_token %}
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>手机：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" type="text" class="mytextfield" id="" value="" maxlength="11 " />
+														</td> 
+														</td>
+												    </tr>
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+														</td> 
+														</td>
+												    </tr>
+																							    
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+												</button>
+												<button type="button" class="btn btn-success" type="submit">
+													提交
+												</button>
+											</div>
+											</form>
+										</div>
+									</div>
+								</div>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+			</div>
+			<div class="row clearfix" style="margin-top: 15px;">
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+			</div>
+			<div class="row clearfix" style="margin-top: 15px;">
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+				<div class="col-md-4 column" id="item">
+					<div>
+						<img alt="90x90" src="{% static 'img/a.jpg' %}" class="img-circle" style="margin-left: 22%;">
+					</div>
+					<div>
+						<font style="float: left;">件数：1</font>
+						<font style="float: right;">我要借用</font>
+					</div>
+				</div>
+			</div>
+			
+		</div-->
+		
+		
+		<div class="col-md-7 column" id="row3">
+			<a style="height: 10%;" href="#" class="list-group-item active">
+				快来借共享物品吧！
+			</a>
+			
+			<div id="item">
+				
+				<a href="#" class="list-group-item">
+					<div class="col-md-2 column" id="itempic">
+						<img alt="140x140" src="{% static 'img/a.jpg' %}" class="img-rounded">
+					</div>
+					<div class="col-md-8 column">
+						
+						<p>剩余件数：2　　　　物品名称：clothes</p>
+						<p>物品简介：Extremely beautiful</p>
+						
+					</div>
+					<div class="col-md-2 column">
+						
+						<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+									我要借用
+								</button>
+								
+								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+													&times;
+												</button>
+												<h3 class="modal-title" id="myModalLabel">
+													订单生成  
+												</h3>
+											</div>
+											<form action="" method="POST">
+												{% csrf_token %}
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>手机：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" type="text" class="mytextfield" id="" value="" maxlength="11 " />
+														</td> 
+														</td>
+												    </tr>
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+														</td> 
+														</td>
+												    </tr>
+																							    
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+												</button>
+												<button type="button" class="btn btn-success" type="submit">
+													提交
+												</button>
+											</div>
+											</form>
+										</div>
+									</div>
+								</div>
+						
+						
+						
+					</div>
+						
+				</a>
+			</div>
+			
+			
+			<div id="item">
+				
+				<a href="#" class="list-group-item">
+					<div class="col-md-2 column" id="itempic">
+						<img alt="140x140" src="{% static 'img/a.jpg' %}" class="img-rounded">
+					</div>
+					<div class="col-md-8 column">
+						
+						<p>剩余件数：2　　　　物品名称：clothes</p>
+						<p>物品简介：Extremely beautiful</p>
+						
+					</div>
+					<div class="col-md-2 column">
+						
+						<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+									我要借用
+								</button>
+								
+								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+													&times;
+												</button>
+												<h3 class="modal-title" id="myModalLabel">
+													订单生成  
+												</h3>
+											</div>
+											<form action="" method="POST">
+												{% csrf_token %}
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>手机：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" type="text" class="mytextfield" id="" value="" maxlength="11 " />
+														</td> 
+														</td>
+												    </tr>
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+														</td> 
+														</td>
+												    </tr>
+																							    
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+												</button>
+												<button type="button" class="btn btn-success" type="submit">
+													提交
+												</button>
+											</div>
+											</form>
+										</div>
+									</div>
+								</div>
+						
+						
+						
+					</div>
+						
+				</a>
+			</div>
+			
+			
+			<div id="item">
+				
+				<a href="#" class="list-group-item">
+					<div class="col-md-2 column" id="itempic">
+						<img alt="140x140" src="{% static 'img/a.jpg' %}" class="img-rounded">
+					</div>
+					<div class="col-md-8 column">
+						
+						<p>剩余件数：2　　　　物品名称：clothes</p>
+						<p>物品简介：Extremely beautiful</p>
+						
+					</div>
+					<div class="col-md-2 column">
+						
+						<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+									我要借用
+								</button>
+								
+								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+													&times;
+												</button>
+												<h3 class="modal-title" id="myModalLabel">
+													订单生成  
+												</h3>
+											</div>
+											<form action="" method="POST">
+												{% csrf_token %}
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>手机：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" type="text" class="mytextfield" id="" value="" maxlength="11 " />
+														</td> 
+														</td>
+												    </tr>
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+														</td> 
+														</td>
+												    </tr>
+																							    
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+												</button>
+												<button type="button" class="btn btn-success" type="submit">
+													提交
+												</button>
+											</div>
+											</form>
+										</div>
+									</div>
+								</div>
+						
+						
+						
+					</div>
+						
+				</a>
+			</div>
+			
+			
+			<div id="item">
+				
+				<a href="#" class="list-group-item">
+					<div class="col-md-2 column" id="itempic">
+						<img alt="140x140" src="{% static 'img/a.jpg' %}" class="img-rounded">
+					</div>
+					<div class="col-md-8 column">
+						
+						<p>剩余件数：2　　　　物品名称：clothes</p>
+						<p>物品简介：Extremely beautiful</p>
+						
+					</div>
+					<div class="col-md-2 column">
+						
+						<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+									我要借用
+								</button>
+								
+								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal-header">
+												<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+													&times;
+												</button>
+												<h3 class="modal-title" id="myModalLabel">
+													订单生成  
+												</h3>
+											</div>
+											<form action="" method="POST">
+												{% csrf_token %}
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>手机：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" type="text" class="mytextfield" id="" value="" maxlength="11 " />
+														</td> 
+														</td>
+												    </tr>
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+														</td> 
+														</td>
+												    </tr>
+																							    
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+												</button>
+												<button type="button" class="btn btn-success" type="submit">
+													提交
+												</button>
+											</div>
+											</form>
+										</div>
+									</div>
+								</div>
+						
+						
+						
+					</div>
+						
+				</a>
+			</div>
+			
+						
+		
+		</div>
+		
+		<div class="col-md-3 column"></div>
 	</div>
 	<!--div class="row-fluid" id="row3">
 		<div class="span2"></div>
@@ -95,8 +498,10 @@
 		</div>
 		<div class="span2"></div>
 	</div-->
-	</div>
+</div>
 		<script src="{% static 'bootstrap/js/jquery-1.10.2.min.js' %}"></script>
       	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+      	
 	</body>
-</html>
+</html>   
+   
