--- a/myweb/user_app/templates/sharethings.html
+++ b/myweb/user_app/templates/sharethings.html
@@ -63,6 +63,8 @@
 			<div class="row clearfix">
 			<div class="col-md-2 column"></div>
 			<div class="col-md-9 column">
+			<form action="share" class="personalinfomation" method="POST">
+			{% csrf_token %} 
 			<table  width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
 			    <tr>
 					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: ;">物品名称：</h4>
@@ -94,16 +96,17 @@
 			    	
 			    </tr>
 			</table>
+			
 			</div>
 			<div class="col-md-1 column"></div>
 			</div>
 			<br>
 			<div class="row clearfix">
-				<input style="margin-left: 45%;" type="submit" class="btn btn-primary" value="登录" id="login" />
+				<input style="margin-left: 45%;" type="submit" class="btn btn-primary" value="提交" id="login" />
 			</div>
 			
 		</div>
-		
+		</form>
 		<div class="col-md-2 column"></div>
 	</div>               
 	<!--div class="row-fluid" id="row3">
