pics can be displayed at the front end

--- a/myweb/user_app/static/css/index.css
+++ b/myweb/user_app/static/css/index.css
@@ -78,6 +78,10 @@ html,body{height:100%;}
 	background-color: #EDEDED;
 	height: 50%;
 }
+#row4{
+	background-color: #EDEDED;
+	height: 100%;
+}  
 #item{
 	height: 20%;
 }
