--- a/myweb/user_app/templates/person.html
+++ b/myweb/user_app/templates/person.html
@@ -55,12 +55,17 @@
 		
 		<div class="col-md-2 column"></div>
 	</div>
+	
 
+		
+	<div class="clearfix" id="row4">
+		
+	
 	<div class="row clearfix" id="row2">
 		<div class="col-md-2 column"></div>
 		<div class="col-md-3 column" style="background-color:;height: 100%;">
 			<div class="headportrait" style="">
-				<img src="{% static 'img/headportrait.jpg' %}" class="img-rounded" style="height:95%;width:90%;margin-left:10%;margin-top:3% ;" >
+				<!--img src="{% static 'img/headportrait.jpg' %}" class="img-rounded" style="height:95%;width:90%;margin-left:10%;margin-top:3% ;" -->
 			</div>
 			<div class="per_info" style="">
 				{% if user %}
@@ -285,6 +290,7 @@
 		<div class="col-md-3 column"></div>
 	</div>
 	
+ 	</div>
 	<!--div class="row-fluid" id="row3">
 		<div class="span2"></div>
 		<div class="span4">
