--- a/myweb/user_app/templates/test.html
+++ b/myweb/user_app/templates/test.html
@@ -14,11 +14,56 @@
 			<input type="file" name="File" value="File">
 			<input type="submit" name="" value="提交">
 		</form>
+		<div class="col-md-9 column">
+			<form action="tmp" class="objectinformation" method="POST" enctype="multipart/form-data">
+			{% csrf_token %} 
+			<table  width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+			    <tr>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: ;">物品名称：</h4>
+    				<td height="45" align="left">
+    					<input name="name" type="text" class="mytextfield" id="" value="" maxlength="10" />
+					</td> 
+					</td>
+			    </tr>  
+			    <tr>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: ;">件数：</h4>
+    				<td height="45" align="left">
+    					<input name="num" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+					</td> 
+					</td>
+			    </tr>
+			    <tr>
+					<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: ;">图片：</h4>
+    				<td height="" align="left">
+    					<input style="color: ;" name="img" type="file" class="myfile" />
+					</td> 
+					</td>
+			    </tr>
+			    <tr> 
+			    	<td height="40" colspan="" align="left" valign="top" scope="row"><h4 style="color: ;">物品简介：</h4>
+			    	<td  height="150" colspan="3" valign="middle" scope="row">
+			    		<textarea style="margin-top: 10px;width: 80%;" name="description" cols="25" rows="10" class="mytextarea" id="plan_c" style="color:#999" onfocus="if(this.value=='请描述一下你的物品…') this.value='';" onblur="if(this.value=='')this.value='请描述一下你的物品…';">请描述一下你的物品…
+			    		</textarea>
+			    	</td>
+			    	
+			    </tr>
+			</table>
+			
+			</div>
+			<div class="col-md-1 column"></div>
+			</div>
+			<br>
+			<div class="row clearfix">
+				<input style="margin-left: 45%;" type="submit" class="btn btn-primary" value="提交" />
+			</div>
+			
+		</div>
+		</form>
 
 		{% for obj in obj_list %}
 		    <input type="radio" name="obj" id="obj{{ forloop.counter }}" value="{{ obj.id }}" />
 		    <label for="obj{{ forloop.counter }}">{{ obj.name }}</label><br />
-			<img src="{% static ''%}img/{{ obj.img }}" alt="" height="40" width="40">
+			<img src="{% static ''%}{{ obj.img }}" alt="" height="40" width="40">
 		{% endfor %}
 </body>
 </html>
